# prezmanifest

./: .gitignore  README.adoc  README.md  Taskfile.yml  pyproject.toml  t.py
.github/workflows/: validate.yml
prezmanifest/: __init__.py  documentor.py  labeller.py  loader.py  mrr.ttl  ns_mrr.py  ns_olis.py  ns_prez.py  pm.ttl  syncer.py  utils.py  validator.py  validator.ttl
prezmanifest/cli/: __init__.py  app.py
prezmanifest/cli/commands/: document.py  label.py  load.py  sync.py  validate.py
prezmanifest/event/: client.py  syncer.py
tests/: conftest.py  t.py  test_documentor.py  test_labeller.py  test_loader.py  test_sync.py  test_utils.py  test_validator.py
tests/demo-vocabs/: catalogue-metadata.ttl  catalogue.ttl  cw-catalog.ttl  cw-manifest-default.ttl  cw-manifest-invalid.ttl  cw-manifest.ttl  cw-resources.ttl  labels-all.ttl  local-validator-for-invalid.ttl  local-validator.ttl  manifest-cat-link.ttl  manifest-conformance-all.ttl  manifest-conformance.ttl  manifest-invalid-01.ttl  manifest-invalid-02.ttl  manifest-invalid-03.ttl  manifest-invalid-04.ttl  manifest-multi.ttl  manifest-no-labels.ttl  manifest-version-indicators.ttl  manifest.ttl
tests/demo-vocabs-updated1/vocabs/: image-test.ttl  language-test.ttl
tests/demo-vocabs/_background/: labels.ttl
tests/fuseki/: conftest.py
tests/loader-data/: minimal.ttl  minimal2.ttl
tests/test_sync/: manifest-cat.ttl  manifest-nocat.ttl  test_sync.py
tests/test_sync_rdf_delta/: test_canonicalization.py  test_chunking.py  test_sync_rdf_delta_commit_hash.py
tests/validator/: manifest-syntax-error.ttl
(+30 files in other folders)
